Mobile layout for checking queue filter Black explanation for choice block in quizes Remove .io in highlightinh Status for quiz in it's passed Don't include `` as pre if it's in generic stack trace

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -247,7 +247,7 @@
 				}
 				@if (model.QuizState == QuizState.Total && !string.IsNullOrEmpty(item.Explanation))
 				{
-					<p class="text-muted">@item.Explanation</p>
+					<p>@item.Explanation</p>
 				}
 			</div>
 		}
