--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -28,6 +28,10 @@
 			triesCountMessage
 		);
 	}
+	else if (!Model.IsGuest && Model.QuizState == QuizState.Total)
+	{
+		status = string.Format("Решёно с {0} попытки", Model.TryNumber - 1);
+	}
 	else if (Model.ManualQuizCheckQueueItem != null)
 	{
 		status = string.Format("{0}, попытка {1} из {2}",
