--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -2408,11 +2408,25 @@ h4 + div > .notifications__transport-settings__course__link {
 }
 
 /* Manual checking queue filter form */
-#manual-checking-queue-filter-form .checkbox {
-	padding-left: 0;
-	padding-top: 5px;
+@media (min-width: 769px) {
+	#manual-checking-queue-filter-form .manual-checking-queue-filter-form__done-filter {
+		display: block;
+
+	}
+	
+	#manual-checking-queue-filter-form .checkbox {
+		padding-left: 0px;
+		padding-top: 5px;
+	}
+
+	#manual-checking-queue-filter-form .checkbox > label {
+		padding-left: 5px;
+	}
 }
 
-#manual-checking-queue-filter-form .checkbox > label {
-	padding-left: 5px;
+@media (max-width: 768px) {
+	#manual-checking-queue-filter-form .checkbox {
+		padding-top: 0;
+		padding-left: 12px;
+	}
 }
