--- a/src/uLearn.Web/Views/Admin/_ManualCheckingQueueFilterForm.cshtml
+++ b/src/uLearn.Web/Views/Admin/_ManualCheckingQueueFilterForm.cshtml
@@ -6,6 +6,7 @@
 @using (Html.BeginForm(Url.RequestContext.RouteData.GetRequiredString("Action"), "Admin", FormMethod.Get, new { @class = "form-inline", id = "manual-checking-queue-filter-form" }))
 {
 	@Html.Hidden("courseId", Model.CourseId)
+	@Html.Hidden("done", Model.AlreadyChecked.ToString().ToLower())
 
 	@Html.Partial("~/Views/Shared/_GroupsFilter.cshtml", new GroupsFilterViewModel
 	{
@@ -33,8 +34,8 @@
 						Value = kvp.Key.ToString(),
 						HtmlAttributes = kvp.Key == Guid.Empty ? new { data_divider = "true", data_exclusive = "true" } : new object(),
 					}
-				)
-			);
+					)
+				);
 		}
 
 		@Html.DropDownListWithItemAttributes(
@@ -48,16 +49,23 @@
 			})
 	</div>
 
-	<div class="form-group">
+	<div class="form-group manual-checking-queue-filter-form__done-filter visible-xs">
+		<div class="checkbox checkbox-default">
+			@Html.CheckBox("done__mobile", Model.AlreadyChecked, new { data_connect_checkbox = "done" });
+			<label for="done__mobile">
+				Уже проверенные работы
+			</label>
+		</div>
+	</div>
+
+	<div class="form-group manual-checking-queue-filter-form__button">
 		<button role="button" class="btn btn-primary">Отфильтровать</button>
 	</div>
 
-	<br />
-
-	<div class="form-group">
+	<div class="form-group manual-checking-queue-filter-form__done-filter hidden-xs">
 		<div class="checkbox checkbox-default">
-			@Html.CheckBox("done", Model.AlreadyChecked);
-			<label for="done">
+			@Html.CheckBox("done__desktop", Model.AlreadyChecked, new { data_connect_checkbox="done" });
+			<label for="done__desktop">
 				Уже проверенные работы
 			</label>
 		</div>
