--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -1,6 +1,4 @@
-﻿@using Database.Extensions
-@using Database.Models
-@using uLearn.Extensions
+﻿@using uLearn.Extensions
 @using uLearn.Quizes
 @using uLearn.Web.Controllers
 @using uLearn.Web.Views.Course
