Build proj exercise on .Net 4.7 and ToolsVersion 14.0. Default prohibit futher review in group settings

--- a/src/uLearn.Web/Views/Course/LtiExerciseSlide.cshtml
+++ b/src/uLearn.Web/Views/Course/LtiExerciseSlide.cshtml
@@ -11,6 +11,7 @@
 <head>
 	<title>Exercise</title>
 	@Styles.Render("~/ulearn.bundle.css")
+	@Styles.Render("~/katex/katex.min.css")
 </head>
 <body class="lti-component">
 @if (Model != null)
