--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -25,17 +25,30 @@
 	</div>
 
 	<div class="checkbox checkbox-default @(Model.CourseManualCheckingEnabled ? "hidden" : "")">
-		<input checked="checked" data-default-value="true" id="@(fieldsPrefix)manualCheckingForOldSolutions" name="manualCheckingForOldSolutions" type="checkbox" value="true">
-		<input type="hidden" name="manualCheckingForOldSolutions" value="false" />
-		<label for="@(fieldsPrefix)manualCheckingForOldSolutions">
-			Отправить на код-ревью и ручную проверку тестов старые решения участников
-			<span class="glyphicon glyphicon-question-sign with-long-tooltip"
-				data-toggle="tooltip"
-				data-placement="right"
-				title="Если эта опция выключена, то при вступлении студента в группу его старые решения не будут отправлены на код-ревью">
-			</span>
-		</label>
-	</div>
+        <input checked="checked" data-default-value="true" id="@(fieldsPrefix)manualCheckingForOldSolutions" name="manualCheckingForOldSolutions" type="checkbox" value="true">
+        <input type="hidden" name="manualCheckingForOldSolutions" value="false" />
+        <label for="@(fieldsPrefix)manualCheckingForOldSolutions">
+            Отправить на код-ревью и ручную проверку тестов старые решения участников
+            <span class="glyphicon glyphicon-question-sign with-long-tooltip"
+                  data-toggle="tooltip"
+                  data-placement="right"
+                  title="Если эта опция выключена, то при вступлении студента в группу его старые решения не будут отправлены на код-ревью">
+            </span>
+        </label>
+    </div>
+    
+	<div class="checkbox checkbox-default">
+        <input checked="checked" data-default-value="true" id="@(fieldsPrefix)defaultProhibitFutherReview" name="defaultProhibitFutherReview" type="checkbox" value="true">
+        <input type="hidden" name="defaultProhibitFutherReview" value="false" />
+        <label for="@(fieldsPrefix)defaultProhibitFutherReview">
+            По&nbsp;умолчанию запрещать второе прохождение код-ревью
+            <span class="glyphicon glyphicon-question-sign with-long-tooltip"
+                  data-toggle="tooltip"
+                  data-placement="right"
+                  title="В каждом код-ревью вы сможете выбирать, разрешить ли студенту второй раз отправить свой код на проверку. Это опция задаёт лишь значение по умолчанию">
+            </span>
+        </label>
+    </div>
 
 	if (Model.ScoringGroupsCanBeSetInSomeUnit.Count > 0)
 	{
