--- a/src/uLearn.Web/Views/Course/LtiQuizSlide.cshtml
+++ b/src/uLearn.Web/Views/Course/LtiQuizSlide.cshtml
@@ -10,6 +10,7 @@
 <head>
 	<title>Quiz</title>
 	@Styles.Render("~/ulearn.bundle.css")
+	@Styles.Render("~/katex/katex.min.css")
 </head>
 <body class="lti-component">
 	@if (Model != null)
