--- a/src/uLearn.Web/Views/Account/CourseInfo.cshtml
+++ b/src/uLearn.Web/Views/Account/CourseInfo.cshtml
@@ -5,38 +5,33 @@
 }
 
 <div class="container">
-	<h2>@Model.User.UserName — @Model.Course.Title</h2>
+	<h2 class="space-after">@Model.User.VisibleName — @Model.Course.Title</h2>
 
-	<h3>Лекции</h3>
 	<table class="table">
 		<tr>
-			<th>Лекция</th>
+			<th>Модуль</th>
 			<th style="text-align: center !important">Посещено слайдов</th>
-			<th style="text-align: center !important">Решено задач</th>
-			<th style="text-align: center !important">Решено тестов</th>
+			<th style="text-align: center !important">Задачи</th>
+			<th style="text-align: center !important">Тесты</th>
 			<th style="text-align: center !important">Итого</th>
 		</tr>
 		@foreach (var unit in Model.Units)
 		{
 			<tr style="text-align: center">
 				<td style="text-align: left">@unit.Unit.Title</td>
-				<td title="@unit.SlideVisits.Earned of @unit.SlideVisits.Total">@unit.SlideVisits</td>
-				<td title="@unit.Exercises.Earned of @unit.Exercises.Total">@unit.Exercises</td>
-				<td title="@unit.Quizes.Earned of @unit.Quizes.Total">@unit.Quizes</td>
-				<td title="@unit.Total.Earned of @unit.Total.Total">@unit.Total</td>
+				<td title="@unit.SlideVisits.Earned из @unit.SlideVisits.Total">@unit.SlideVisits</td>
+				<td title="@unit.Exercises.Earned из @unit.Exercises.Total">@unit.Exercises</td>
+				<td title="@unit.Quizes.Earned из @unit.Quizes.Total">@unit.Quizes</td>
+				<td title="@unit.Total.Earned из @unit.Total.Total">@unit.Total</td>
 			</tr>
 		}
 		<tr style="font-weight: bold;text-align: center">
-			<td style="text-align: left">Итого по курсу</td>
-			<td title="@Model.Total.SlideVisits.Earned of @Model.Total.SlideVisits.Total">@Model.Total.SlideVisits</td>
-			<td title="@Model.Total.Exercises.Earned of @Model.Total.Exercises.Total">@Model.Total.Exercises</td>
-			<td title="@Model.Total.Quizes.Earned of @Model.Total.Quizes.Total">@Model.Total.Quizes</td>
-			<td title="@Model.Total.Total.Earned of @Model.Total.Total.Total">@Model.Total.Total</td>
+			<td style="text-align: left">Всего по&nbsp;курсу</td>
+			<td title="@Model.Total.SlideVisits.Earned из @Model.Total.SlideVisits.Total">@Model.Total.SlideVisits</td>
+			<td title="@Model.Total.Exercises.Earned из @Model.Total.Exercises.Total">@Model.Total.Exercises</td>
+			<td title="@Model.Total.Quizes.Earned из @Model.Total.Quizes.Total">@Model.Total.Quizes</td>
+			<td title="@Model.Total.Total.Earned из @Model.Total.Total.Total">@Model.Total.Total</td>
 		</tr>
 	</table>
-
-	<h3 id="questions">Заданные вопросы</h3>
-	<div class="load-content" data-url="@Url.Action("ItemsOfUser", "Questions", new { userId = Model.User.Id, courseId = Model.Course.Id })"></div>
-
 </div>
 
