--- a/src/uLearn.Web/Views/Admin/Users.cshtml
+++ b/src/uLearn.Web/Views/Admin/Users.cshtml
@@ -16,7 +16,7 @@
 		<a class="label label-info" href="@Url.Action("Users", new { Model.CourseId, courseRole = CourseRole.Instructor })">@CourseRole.Instructor.GetDisplayName()</a> может видеть статистику по успеваемости, проверять работы, отвечать на комментарии.
 	</p>
 	<p>
-		<a class="label label-success" href="@Url.Action("Users", new { Model.CourseId, courseRole = CourseRole.Tester })">@CourseRole.Tester.GetDisplayName()</a> может видеть ещё не опубликованные для всех материалы.
+		<a class="label label-success" href="@Url.Action("Users", new { Model.CourseId, courseRole = CourseRole.Tester })">@CourseRole.Tester.GetDisplayName()</a> может видеть ещё не опубликованные материалы.
 	</p>
 	<p>
 		<a class="label label-default" href="@Url.Action("Users", new { Model.CourseId })">Обычный пользователь</a> может видеть только опубликованные материалы.
