--- a/src/uLearn.Web/Views/Comments/_Comment.cshtml
+++ b/src/uLearn.Web/Views/Comments/_Comment.cshtml
@@ -31,7 +31,7 @@
 		 media"
 		data-comment-id="@Model.Comment.Id">
 		
-		@if (User.HasAccess(CourseRole.CourseAdmin))
+		@if (Model.CanViewAuthorProfile)
 		{
 			<a class="pull-left" href="@Url.Action("Profile", "Account", new { userId = Model.Comment.AuthorId })">
 				@UserAvatar.Avatar(Model.Comment.Author, "comment__author-avatar media-object")
@@ -47,7 +47,7 @@
 		<div class="media-body">
 			<div class="comment__header media-heading">
 				<div class="comment__author-name">
-					@if (User.HasAccess(CourseRole.CourseAdmin))
+					@if (Model.CanViewAuthorProfile)
 					{
 						<a href="@Url.Action("Profile", "Account", new { userId = Model.Comment.AuthorId })">@Model.Comment.Author.VisibleName</a>
 					}
