--- a/src/uLearn.Web/Views/Account/_RemoveAccountPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/_RemoveAccountPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@using uLearn.Web.Microsoft.Owin.Security.VK
+﻿@using uLearn.Web.Kontur.Passport
+@using uLearn.Web.Microsoft.Owin.Security.VK
 @model ICollection<Microsoft.AspNet.Identity.UserLoginInfo>
 
 @if (Model.Count > 0)
@@ -10,7 +11,17 @@
 		{
 			<tr>
 				<td>
-					@account.LoginProvider <span class="text-muted">@(account.LoginProvider == VkAuthenticationConstants.AuthenticationType ? "id" + account.ProviderKey : "")</span>
+					@account.LoginProvider
+                    <span class="text-muted">
+                        @if (account.LoginProvider == VkAuthenticationConstants.AuthenticationType)
+                        {
+	                        <text>id@(account.ProviderKey)</text>
+                        }
+                        @if (account.LoginProvider == KonturPassportConstants.AuthenticationType)
+                        {
+	                        <text>@ViewBag.User.KonturLogin</text>
+                        }
+                    </span>
 				</td>
 				<td>
 					@if (ViewBag.ShowRemoveButton)
