Okay, it should work now..
MsBuild 15.0, new Microsoft.Build[.Framework]

--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -45,7 +45,7 @@
             <span class="glyphicon glyphicon-question-sign with-long-tooltip"
                   data-toggle="tooltip"
                   data-placement="right"
-                  title="В каждом код-ревью вы сможете выбирать, разрешить ли студенту второй раз отправить свой код на проверку. Это опция задаёт лишь значение по умолчанию">
+                  title="В каждом код-ревью вы сможете выбирать, разрешить ли студенту второй раз отправить свой код на проверку. Эта опция задаёт лишь значение по умолчанию">
             </span>
         </label>
     </div>
