Stable string hashed for quizzes

--- a/src/uLearn.Web/Views/Exercise/_ExerciseReview.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseReview.cshtml
@@ -2,6 +2,7 @@
 @using Database.Extensions
 @using Microsoft.AspNet.Identity
 @using uLearn
+@using uLearn.Extensions
 @using uLearn.Web.Extensions
 @model ExerciseCodeReviewModel
 
